# ai-mage-pipelines

./: .gitignore  Makefile  pyproject.toml  requirements.txt  upload_langfuse_traces.py
langfuse/: metadata.yaml
langfuse/data_exporters/: upload_langfuse_scores.py  upload_observations.py  upload_scores.py  upload_traces.py
langfuse/data_loaders/: load_langfuse_analytics.py  load_langfuse_traces.py  load_observations.py  load_scores.py  load_traces.py
langfuse/pipelines/sparkling_cloud/: metadata.yaml
langfuse/transformers/: fill_in_missing_values.py
langfuse/utils/: constants.py  utils.py
langfuse_analytics_collection/data_exporters/: upload_observations.py  upload_scores.py  upload_traces.py
langfuse_analytics_collection/data_loaders/: load_observations.py  load_scores.py  load_traces.py
langfuse_analytics_collection/pipelines/langfuse_analytics_collection/: metadata.yaml
langfuse_analytics_collection/utils/: constants.py  utils.py
lodgify/: io_config.yaml  requirements.txt.old
lodgify/data_exporters/: ai_assistant_save_observations.py  ai_assistant_save_scores.py  ai_assistant_save_traces.py  ai_assistant_upload_scores.py  ai_assistant_upload_traces.py  ai_tools_save_observations.py  ai_tools_save_scores.py  ai_tools_save_traces.py  upload_observations.py  upload_scores.py  upload_traces.py
lodgify/data_loaders/: ai_assistant_fetch_observations.py  ai_assistant_fetch_scores.py  ai_assistant_fetch_traces.py  ai_assistant_load_observations.py  ai_assistant_load_scores.py  ai_assistant_load_traces.py  ai_tools_fetch_observations.py  ai_tools_fetch_scores.py  ai_tools_fetch_traces.py  load_observations.py  load_scores.py  load_traces.py
lodgify/pipelines/ai_assistant_langfuse_export/: metadata.yaml
lodgify/pipelines/ai_assistant_langfuse_import/: metadata.yaml
lodgify/pipelines/ai_tools_langfuse_import/: metadata.yaml
lodgify/utils/ai_assistant/: constants.py  logger.py  utils_langfuse.py  utils_postgres.py
lodgify/utils/ai_tools/: constants.py  utils_langfuse.py  utils_postgres.py
